banner photo done

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,16 @@
 <%= render 'shared/navbar' %>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/diyszwqhl/image/upload/v1597721263/wedding1.jpg);">
+  <div class="container">
+  </div>
+</div>
+<div class="strenghts">
+  <div class="strenght-box">
+    <p>variety</p>
+  </div>
+  <div class="strenght-box">
+    <p>experience</p>
+  </div>
+  <div class="strenght-box">
+    <p>price</p>
+  </div>
+</div>
