--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-light navbar-lewagon">
+<div class="navbar navbar-expand-sm navbar-light navbar-lewagon sticky-top">
   <%= link_to "#", class: "navbar-brand" do %>
     <%= cl_image_tag("threepalaces_lnfkwr", class: "avatar")  %>
   <% end %>
