--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,12 +5,21 @@
 </div>
 <div class="strenghts">
   <div class="strenght-box">
-    <p>variety</p>
+    <i class="fas fa-tasks"></i>
+    <p class="title-strenghts">Variety</p>
+    <p class="text-strenghts">Our store has a huge variety of dresses <br>
+      according to our client necessities</p>
   </div>
   <div class="strenght-box">
-    <p>experience</p>
+    <i class="fas fa-balance-scale"></i>
+    <p class="title-strenghts">Experience</p>
+    <p class="text-strenghts">Our store will provide the best experience <br>
+      to the clients </p>
   </div>
   <div class="strenght-box">
-    <p>price</p>
+    <i class="fas fa-yen-sign"></i>
+    <p class="title-strenghts">Price</p>
+    <p class="text-strenghts">Our store has a competitive market price <br>
+      and also many price options</p>
   </div>
 </div>
