--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <%= render 'shared/navbar' %>
 <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/diyszwqhl/image/upload/v1597721263/wedding1.jpg);">
   <div class="container">
+    <%= cl_image_tag "threepalacessilverwhiteopacity2_txjsz4", class: "avatar"%>
   </div>
 </div>
 <div class="strenghts">
