--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -6,6 +6,12 @@
   position: relative;
   top: -70px;
   border-bottom: 1px solid rgba(255,255,255,0.2);
+  .container {
+    height: 100%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+  }
 }
 .strenghts {
   display: flex;
