--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,21 +6,34 @@
 </div>
 <div class="strenghts">
   <div class="strenght-box">
-    <i class="fas fa-tasks"></i>
+    <!-- <i class="fas fa-tasks"></i> -->
     <p class="title-strenghts">Variety</p>
-    <p class="text-strenghts">Our store has a huge variety of dresses <br>
-      according to our client necessities</p>
+    <p class="text-strenghts">トレンドに左右されない <br>
+      タイムレスなデザインを厳選し <br>
+      世界中から個性豊かなスタイルが <br>
+      集まっています</p>
+    <!-- <p class="text-strenghts">Our store has a huge variety of dresses <br>
+      according to our client necessities</p> -->
   </div>
   <div class="strenght-box">
-    <i class="fas fa-balance-scale"></i>
+    <!-- <i class="fas fa-balance-scale"></i> -->
     <p class="title-strenghts">Experience</p>
-    <p class="text-strenghts">Our store will provide the best experience <br>
-      to the clients </p>
+    <p class="text-strenghts">完全予約制の仙台市内にある <br>
+      小さなドレスサロン ご要望に合わせた <br>
+      トータルコーディネートを <br>
+      ご提案します</p>
+    <!-- <p class="text-strenghts">Our store will provide the best experience <br>
+      to the clients </p> -->
   </div>
   <div class="strenght-box">
-    <i class="fas fa-yen-sign"></i>
+    <!-- <i class="fas fa-yen-sign"></i> -->
     <p class="title-strenghts">Price</p>
-    <p class="text-strenghts">Our store has a competitive market price <br>
-      and also many price options</p>
+    <p class="text-strenghts">世界のセレブ御用達の <br>
+      ハイブランドドレスも <br>
+      マイクロウエディングのコンセプトを <br>
+      共感できる
+      新人デザイナーのドレスも</p>
+    <!-- <p class="text-strenghts">Our store has a competitive market price <br>
+      and also many price options</p> -->
   </div>
 </div>
