--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -34,9 +34,11 @@
     }
     .text-strenghts {
       margin-top: -8px;
+      font-family: 'Noto Serif JP', serif;
     }
     .title-strenghts {
       font-size: 24px;
+      font-family: 'Dancing Script', cursive;
     }
   }
 }
