--- a/app/views/pages/try.html.erb
+++ b/app/views/pages/try.html.erb
@@ -1,9 +1,8 @@
-<%= render 'shared/navbar' %>
-<div class="r">
-  <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/diyszwqhl/image/upload/v1597721263/wedding1.jpg);">
-    <div class="container">
-      <%= cl_image_tag "threepalacessilverwhiteopacity2_txjsz4", class: "avatar"%>
-    </div>
+<div class="canner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/background.png);">
+  <div class="container">
+    <h1>Le Wagon brings <strong>tech skills</strong> to <strong>creative people</strong>!</h1>
+    <p>Change your life and learn to code at one of our campuses around the world.</p>
+    <a class="btn btn-flat" href="#">Apply now</a>
   </div>
 </div>
 <div class="strenghts">
