minor bugs fixed

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,12 +3,14 @@
   <div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://res.cloudinary.com/diyszwqhl/image/upload/v1597721263/wedding1.jpg);">
     <div class="container">
       <%= cl_image_tag "threepalacessilverwhiteopacity2_txjsz4", class: "avatar"%>
+      <div class="container-p">
+        <p>Coming soon...</p>
+      </div>
     </div>
   </div>
 </div>
 <div class="strenghts">
   <div class="strenght-box">
-    <!-- <i class="fas fa-tasks"></i> -->
     <p class="title-strenghts">Variety</p>
     <p class="text-strenghts">トレンドに左右されない
       タイムレスなデザインを厳選し
@@ -35,7 +37,6 @@
       to the clients </p> -->
   </div>
   <div class="strenght-box">
-    <!-- <i class="fas fa-yen-sign"></i> -->
     <p class="title-strenghts">Price</p>
     <p class="text-strenghts">シンプルなドレスも
       世界の
