--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -2,6 +2,8 @@
   background-size: cover;
   background-position: center;
   padding: 150px 0;
+  height: 80%;
+  width: 100%;
   // height: 70vh;
   // position: relative;
   // top: -70px;
@@ -10,15 +12,23 @@
   .container {
     height: 100%;
     display: flex;
-    justify-content: end;
-    align-items: center;
+    justify-content: center;
+    // align-items: center;
+    flex-direction: column;
+    p {
+      font-family: 'Dancing Script', cursive;
+      font-size: 40px;
+    }
+    .container-p {
+      width: 400px;
+    }
   }
 }
 .strenghts {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  margin-top: -32px;
+  margin-top: 32px;
   .strenght-box {
     display: flex;
     justify-content: center;
@@ -44,31 +54,12 @@
     }
   }
 }
-.canner {
-  background-size: cover;
-  background-position: center;
-  padding: 150px 0;
-}
-
-.canner h1 {
-  margin: 0;
-  color: white;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-  font-size: 32px;
-  font-weight: bold;
-}
-
-.canner p {
-  font-size: 20px;
-  color: white;
-  opacity: .7;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-}
 
 
 // Smallest device
 @media (min-width: 100px) and (max-width: 575px) {
   .banner {
+
   }
 }
 
@@ -76,6 +67,7 @@
 @media (min-width: 576px) {
   .banner {
     // max-height: auto;
+
   }
 }
 
@@ -89,13 +81,20 @@
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
   .banner {
-    height: 70vh;
+    // height: 100vh;
+    background-position: inherit;
+    height: 80vh;
+    position: relative;
+    top: -80px;
   }
 }
 
 // Extra large devices (large desktops, 1200px and up)
 @media (min-width: 1200px) {
   .banner {
-    height: 70vh;
+    background-position: inherit;
+    height: 80vh;
+    position: relative;
+    top: -80px;
   }
 }
