strenghts dv minor problem fixed

--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -87,6 +87,9 @@
     position: relative;
     top: -80px;
   }
+  .strenghts {
+    margin-top: -32px;
+  }
 }
 
 // Extra large devices (large desktops, 1200px and up)
@@ -96,5 +99,8 @@
     height: 80vh;
     position: relative;
     top: -80px;
+  }
+  .strenghts {
+    margin-top: -32px;
   }
 }
