--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,8 +10,8 @@
   </div>
 </div>
 <div class="strenghts">
-  <div class="strenght-box">
-    <p class="title-strenghts">Variety</p>
+  <div class="strenght-box strenghts1">
+    <p class="title-strenghts" id="title1">Variety</p>
     <p class="text-strenghts">トレンドに左右されない
       タイムレスなデザインを厳選し
       世界中から個性豊かなスタイルが
@@ -23,8 +23,8 @@
     <!-- <p class="text-strenghts">Our store has a huge variety of dresses <br>
       according to our client necessities</p> -->
   </div>
-  <div class="strenght-box">
-    <p class="title-strenghts">Experience</p>
+  <div class="strenght-box strenghts2">
+    <p class="title-strenghts" id="title2">Experience</p>
     <p class="text-strenghts">完全予約制の仙台市内にある
       小さなドレスサロン ご要望に合わせた
       トータルコーディネートを
@@ -36,8 +36,8 @@
     <!-- <p class="text-strenghts">Our store will provide the best experience <br>
       to the clients </p> -->
   </div>
-  <div class="strenght-box">
-    <p class="title-strenghts">Price</p>
+  <div class="strenght-box strenghts3">
+    <p class="title-strenghts" id="title3">Price</p>
     <p class="text-strenghts">シンプルなドレスも
       世界の
       セレブ御用達のハイブランドドレスも
@@ -49,4 +49,10 @@
     <!-- <p class="text-strenghts">Our store has a competitive market price <br>
       and also many price options</p> -->
   </div>
+</div>
+<div class="info-contact-me">
+  <p>If you have any <b>inquiries</b> Please send us an email</p>
+  <a href="mailto:info@threepalaces.com">
+    <p><i class="fa fa-envelope" aria-hidden="true"> info@threepalaces.com</i></p>
+  </a>
 </div>
