--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -141,39 +141,86 @@
     right: 32px;
   }
 
+  .banner {
+    // background-position: inherit;
+    // height: 80vh;
+    // position: relative;
+    // top: -80px;
+  }
   .strenghts {
-        // font-size: 40px;
-        // grid-template-columns: 1fr;
+    // margin-top: -64px;
+    // grid-template-columns: 1fr 1fr 1fr;
+    // position: inherit;
+    // p {
+    //   font-size: 16px
+    // }
+  }
+  .title-strenghts {
+    font-size: 24px;
+  }
+  .info-contact-me {
+    // text-align: center;
+    // font-size: 12px;
+    // height: auto;
+    // p {
+    //   margin: 0;
+    // }
+  }
+  .title-strenghts {
+    font-size: 24px;
+  }
+  #title1 {
+    font-size: 24px;
   }
 
-//   .info-contact-me {
-//   text-align: center;
-//   font-size: 32px;
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   justify-content: flex-end;
-//   height: 38vh;
-//   p {
-//     margin: 0;
-//   }
-// }
+  #title2 {
+    font-size: 24px;
+  }
+
+  #title3 {
+    font-size: 24px;
+  }
 }
 
 // Large devices (desktops, 992px and up)
 @media (min-width: 992px) {
+  // .banner {
+  //   // height: 100vh;
+  //   background-position: inherit;
+  //   height: 80vh;
+  //   position: relative;
+  //   top: -80px;
+  // }
+  // .strenghts {
+  //   margin-top: -32px;
+  //   grid-template-columns: 1fr 1fr 1fr;
+  //   p {
+  //     font-size: 16px
+  //   }
+  // }
   .banner {
-    // height: 100vh;
-    background-position: inherit;
+    // background-position: inherit;
     height: 80vh;
     position: relative;
     top: -80px;
   }
   .strenghts {
-    margin-top: -32px;
+    margin-top: -64px;
     grid-template-columns: 1fr 1fr 1fr;
+    position: inherit;
     p {
       font-size: 16px
+    }
+  }
+  .title-strenghts {
+    font-size: 24px;
+  }
+  .info-contact-me {
+    text-align: center;
+    font-size: 12px;
+    height: auto;
+    p {
+      margin: 0;
     }
   }
   .title-strenghts {
