--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,13 +4,11 @@
     <title>Threepalaces</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link rel="shortcut icon" href="https://res.cloudinary.com/diyszwqhl/image/upload/v1597904547/threepalacesgooglelogo_mg3yl3.png" type="image/x-icon">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
-
   </head>
-
   <body>
     <%= yield %>
   </body>
