--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,10 @@
     <title>Threepalaces</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> -->
+    <meta name=“description” content=“仙台市内にある完全予約制の小さなドレスショップ”>
+    <meta name=“keywords” content=“Threepalaces, Three palaces, bridal, ウエディングドレス, weddingdress,　ブライダルサロン, Sendai, 仙台, salon, Vera Wang, Pronovias”>
+    <meta name=“author” content=“Threepalaces”>
     <link rel="shortcut icon" href="https://res.cloudinary.com/diyszwqhl/image/upload/v1597904547/threepalacesgooglelogo_mg3yl3.png" type="image/x-icon">
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload', defer: true %>
