--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -8,7 +8,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <%= link_to "#", class: "nav-link" do %>
+        <%= link_to "https://instagram.com/three_palaces_bridal?igshid=1trm4affsq3kc", class: "nav-link", target: :_blank do %>
           <i class="fab fa-instagram-square"></i>
         <% end %>
       </li>
@@ -18,7 +18,7 @@
         <% end %>
       </li>
       <li class="nav-item">
-        <%= link_to "#", class: "nav-link" do %>
+        <%= link_to "https://m.facebook.com/Three-Palaces-Bridal-105953217896111/?__tn__=C-R", class: "nav-link", target: :_blank do %>
           <i class="fab fa-facebook-square"></i>
         <% end %>
       </li>
