--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -13,7 +13,8 @@
     height: 100%;
     display: flex;
     justify-content: center;
-    // align-items: center;
+    align-items: flex-end;
+    margin-right: 0;
     flex-direction: column;
     p {
       font-family: 'Dancing Script', cursive;
@@ -86,7 +87,7 @@
     // max-width: 720px;
     position: relative;
     bottom: 58px;
-    right: 32px;
+    // right: 32px;
   }
   .strenghts {
     grid-template-columns: 1fr;
@@ -138,7 +139,7 @@
     // max-width: 720px;
     position: relative;
     bottom: 80px;
-    right: 32px;
+    // right: 32px;
   }
 
   .banner {
